--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+include ./theme.conf
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -66,7 +68,7 @@ font_size 14.0
 #: value moves the baseline up, and a negative value moves them down.
 #: The underline and strikethrough positions are adjusted accordingly.
 
-# symbol_map
+symbol_map 
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -182,7 +184,7 @@ font_size 14.0
 
 #: Cursor customization {{{
 
-# cursor #cccccc
+cursor #bababa
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -199,7 +201,7 @@ font_size 14.0
 #: special keyword: background. Note that if cursor is set to none
 #: then this option is ignored.
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -224,7 +226,7 @@ font_size 14.0
 #: disable blinking. Negative values mean use system default. Note
 #: that the minimum interval will be limited to repaint_delay.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
@@ -311,24 +313,24 @@ font_size 14.0
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-# url_color #0087bd
-# url_style curly
+url_color #0087bd
+url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
 
-# open_url_with default
+open_url_with default
 
 #: The program to open clicked URLs. The special value default means
 #: to use the operating system's default URL handler (open on macOS
 #: and xdg-open on Linux).
 
-# url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
+url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
 
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# detect_urls yes
+detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
 #: underline and the mouse cursor becomes a hand over them. Even if
