new custom terminal theme

--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,26 +1,31 @@
-# Apprentice by Romain Lafourcade, https://github.com/romainl
-# This work is licensed under the terms of the MIT license.
-# For a copy, see https://opensource.org/licenses/MIT.
-
-cursor     #c7c7c7
-cursor_text_color #feffff
-selection_foreground #3e3e3e
-selection_background #c1ddff
-foreground #c8c8c8
-background #323232
-color0     #252525
-color8     #555555
-color1     #be7472
-color9     #ff9900
-color2     #709772
-color10    #97bb98
-color3     #989772
-color11    #fefdbc
-color4     #7199bc
-color12    #9fbdde
-color5     #727399
-color13    #989abc
-color6     #719899
-color14    #6fbbbc
-color7     #7f7f7f
-color15    #feffff
+# still needs to be tweaked and changed to look more appealing
+background #171717
+selection_background #828282
+foreground #f0f0f0
+selection_foreground #171717
+cursor     #f0f0f0
+cursor_text_color #22629d
+#black
+color0     #666666
+color8     #828282
+#red
+color1     #ff4f3b
+color9     #f97676
+#green
+color2     #1abb47
+color10    #4cd673
+#yellow
+color3     #fdea46
+color11    #fff48e
+#blue
+color4     #1f88ea
+color12    #6eb0f2
+#megenta
+color5     #e245e2
+color13    #ec8bec
+#cyan
+color6     #65d1ea
+color14    #89dfe4
+#white
+color7     #d5d5d5
+color15    #f0f0f0
