--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -6,8 +6,8 @@ selection_foreground #171717
 cursor     #f0f0f0
 cursor_text_color #22629d
 #black
-color0     #666666
-color8     #828282
+color0     #171717
+color8     #666666
 #red
 color1     #ff4f3b
 color9     #f97676
@@ -24,8 +24,8 @@ color12    #6eb0f2
 color5     #e245e2
 color13    #ec8bec
 #cyan
-color6     #65d1ea
-color14    #89dfe4
+color6     #3fc8e8
+color14    #8fd9ea
 #white
-color7     #d5d5d5
+color7     #bababa
 color15    #f0f0f0
