--- a/kitty/themes/vibrant_theme.conf
+++ b/kitty/themes/vibrant_theme.conf
@@ -1,5 +1,5 @@
 # still needs to be tweaked and changed to look more appealing
-background #171717
+background #1d1d1d
 selection_background #828282
 foreground #f0f0f0
 selection_foreground #171717
