changed terminal emulation to fix ssh

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -17,3 +17,5 @@ url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto ne
 detect_urls yes
 
 shell_integration enabled no-cursor
+
+term xterm-256color
