--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,9 @@
 include ./vs_theme.conf
 
-font_family      JetBrains Mono Regular
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+font_family      JetBrainsMono Nerd Font Mono Regular
+bold_font        JetBrainsMono Nerd Font Mono Bold
+italic_font      JetBrainsMono Nerd Font Mono Italic
+bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
 
 font_size 14.0
 
