--- a/yt-dlp/yt-dlp.conf
+++ b/yt-dlp/yt-dlp.conf
@@ -1,4 +1,5 @@
--o ~/Movies/youtube-dl/%(title)s.%(channel)s.%(webpage_url)s.%(ext)s
+-o ~/Movies/youtube-dl/%(title)s.%(ext)s
 -f 'bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best'
 --embed-thumbnail
+--embed-metadata
 --cookies-from-browser firefox
