slight updates to yt-dlp.conf

--- a/yt-dlp/yt-dlp.conf
+++ b/yt-dlp/yt-dlp.conf
@@ -1,5 +1,7 @@
--o ~/Movies/youtube-dl/%(title)s.%(ext)s
+-o '/Volumes/NAS/Video/youtube-dl/%(title)s.%(ext)s'
 -f 'bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best'
 --embed-thumbnail
 --embed-metadata
 --cookies-from-browser firefox
+--restrict-filenames
+--trim-filenames 80
