--- a/gallery-dl/.gallery-dl.conf
+++ b/gallery-dl/.gallery-dl.conf
@@ -8,16 +8,17 @@
 
         "twitter": {
             "archive": "/Volumes/NAS/Images/gallery-dl/twitter/twitter-extractor-archive.sqlite3",
-            "directory": ["twitter"],
+            "directory": ["twitter", "{author[name]}"],
             "text-tweets": true,
             "size": "orig",
             "quoted": true,
             "ratelimit": "wait",
-            "locked": "abort"
+            "locked": "abort",
+            "image-filter": "user is author"
         },
 
         "pinterest": {
-            "archive": "/Volumes/NAS/Images/gallery-dl/twitter/pinterest-extractor-archive.sqlite3"
+            "archive": "/Volumes/NAS/Images/gallery-dl/pinterest/pinterest-extractor-archive.sqlite3"
         }
     },
     "downloader": {
